# tts

./: .flake8  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  settings.toml
.github/workflows/: pyformatter.yml  pylint.yml  pytest.yml
services/: file_service.py  logger_config.py  normalizer.py  tts.py  web_service.py
tests/: conftest.py  test_file_service.py  test_logger.py  test_normalizer.py  test_prepare_text.py  test_tts_service.py
